change by bonoj